--- a/01.hello示例/index.html
+++ b/01.hello示例/index.html
@@ -19,7 +19,7 @@
                el: '#root',
                data:
                {
-                   peopleName: '小狗子'
+                   peopleName: '大狗子'
                }
             }
         );
