--- a/01.hello示例/index.html
+++ b/01.hello示例/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>首页</title>
 
     <script src="../node_modules/vue/dist/vue.js"></script>
 </head>
