--- a/src/index.html
+++ b/src/index.html
@@ -10,19 +10,16 @@
 <body>
     <div class="root">
         <h1>你好，{{peopleName}}，现在的时间戳是：{{Date.now()}}.</h1>
-        <a v-bind:href="url">点我跳转</a> <br/>
-        <a :href="url">点我跳转</a>
     </div>
 
     <script>
-        new Vue
+        const vm = new Vue
         (
             {
                el: '.root',
                data:
                {
-                   peopleName: '小小狗子',
-                   url: 'http://www.google.com'
+                   peopleName: '狗子'
                }
             }
         );
